Minimize elm files

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "esm": "^3.2.25",
     "node-elm-compiler": "^5.0.4",
-    "showdown": "^1.9.1"
+    "showdown": "^1.9.1",
+    "terser": "^4.6.4"
   }
 }
