--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Natural simulations in Elm based on \"Advanced JS: Natural Simulations\" from Khan Academy.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "elm make src/Main.elm --output=dist/elm.js --optimize;terser dist/elm.js --compress 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9\",pure_getters,keep_fargs=false,unsafe_comps,unsafe' --mangle --output=dist/elm.min.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "@types/node": "^13.7.7",
     "esm": "^3.2.25",
     "showdown": "^1.9.1",
+    "terser": "^4.6.6",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   }
