--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx chokidar \"**/*.elm\" \"build.ts\" --ignore \"**/Main.elm\" -c \"npx ts-node -r esm build.ts; elm make src/Main.elm --output=dist/elm.js\"",
-    "dist": "npx ts-node -r esm build.ts; elm make src/Main.elm --output=dist/elm.js --optimize;terser dist/elm.js --compress 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9\",pure_getters,keep_fargs=false,unsafe_comps,unsafe' --mangle --output=dist/elm.min.js"
+    "dist": "npx ts-node -r esm build.ts; elm make src/Main.elm --output=dist/elm.js --optimize;terser dist/elm.js --compress 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9\",pure_getters,keep_fargs=false,unsafe_comps,unsafe' --mangle --output=dist/elm.js"
   },
   "repository": {
     "type": "git",
